Bug 240962 - Move TryChannelCharset up to nsDocument, and use it for XML and XHTML documents. r+sr=bzbarsky, a=dbaron